--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 <div id="settingsgreen" class="settings"style="top:33%;left:520px;display:none;width:2.5%;background:limegreen;"></div>
  <div id="right" style="z-index:1000;opacity:0;position:absolute;left:90%;top:0%;height:100%;background:green;width:10%;" onmouseleave="fastrightcancel()"onmouseover="fastright2()"></div>
  <div id="left" style="z-index:1000;opacity:0;position:absolute;left:0%;top:0%;height:100%;background:green;width:10%;" onmouseleave="fastleftcancel()"onmouseover="fastleft2()"></div>
- <div id="cam1a" class="mapbutton" onclick="changecam1a()"></div>
-<div id="cam1b" class="mapbutton" onclick="changecam1b()"></div>
-<div id="cam1c" class="mapbutton" onclick="changecam1c()"></div>
-<div id="cam5" class="mapbutton" onclick="changecam5()"></div>
-<div id="cam7" class="mapbutton" onclick="changecam7()"></div>
-<div id="cam3" class="mapbutton" onclick="changecam3()"></div>
- <div id="cam2a" class="mapbutton" onclick="changecam2a()"></div>
-<div id="cam2b" class="mapbutton" onclick="changecam2b()"></div>
-<div id="cam4a" class="mapbutton" onclick="changecam4a()"></div>
-<div id="cam4b" class="mapbutton" onclick="changecam4b()"></div>
+ <div id="cam1a" class="mapbutton" onclick="changecam1a() + anothercamclicked()"></div>
+<div id="cam1b" class="mapbutton" onclick="changecam1b() + anothercamclicked()"></div>
+<div id="cam1c" class="mapbutton" onclick="changecam1c() + anothercamclicked()"></div>
+<div id="cam5" class="mapbutton" onclick="changecam5() + anothercamclicked()"></div>
+<div id="cam7" class="mapbutton" onclick="changecam7() + anothercamclicked()"></div>
+<div id="cam3" class="mapbutton" onclick="changecam3() + anothercamclicked()"></div>
+ <div id="cam2a" class="mapbutton" onclick="changecam2a() + anothercamclicked()"></div>
+<div id="cam2b" class="mapbutton" onclick="changecam2b() + anothercamclicked()"></div>
+<div id="cam4a" class="mapbutton" onclick="changecam4a() + anothercamclicked()"></div>
+<div id="cam4b" class="mapbutton" onclick="changecam4b() + anothercamclicked()"></div>
 <div id="boop" style="left:39%"onclick="honk()"></div>
  
  <!--<img id="buttonleft" class="button" src=""> -->
