--- a/index.html
+++ b/index.html
@@ -111,6 +111,34 @@
 <audio id="hello5" volume="1">
    <source src="Assets/Sounds/night5.wav" type="audio/wav">
 </audio>
+<audio id="cutoff" volume="1">
+   <source src="Assets/Sounds/cutoff.wav" type="audio/wav">
+</audio>
+ <audio id="powerdown" volume="1">
+   <source src="Assets/Sounds/powerdown.wav" type="audio/wav">
+</audio>
+ <audio id="musicbox" volume="1">
+   <source src="Assets/Sounds/music%20box.wav" type="audio/wav">
+</audio>
+ <audio id="knock3" volume="1">
+   <source src="Assets/Sounds/knock3.wav" type="audio/wav">
+</audio>
+ <audio id="knock2" volume="1">
+   <source src="Assets/Sounds/knock2.wav" type="audio/wav">
+</audio>
+ <audio id="knock1" volume="1">
+   <source src="Assets/Sounds/knock1.wav" type="audio/wav">
+</audio>
+ <audio id="laugh3" volume="1">
+   <source src="Assets/Sounds/freddy3.wav" type="audio/wav">
+</audio>
+ <audio id="laugh2" volume="1">
+   <source src="Assets/Sounds/freddy2.wav" type="audio/wav">
+</audio>
+ <audio id="laugh1" volume="1">
+   <source src="Assets/Sounds/freddy1.wav" type="audio/wav">
+</audio>
+  
 </div>
 <!-- SO MANY SOUNDS -->
 <!-- scripts -->
