--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
    <source src="Assets/Sounds/powerdown.wav" type="audio/wav">
 </audio>
  <audio id="musicbox" volume="1">
-   <source src="Assets/Sounds/music%20box.wav" type="audio/wav">
+   <source src="Assets/Sounds/music box.wav" type="audio/wav">
 </audio>
  <audio id="knock3" volume="1">
    <source src="Assets/Sounds/knock3.wav" type="audio/wav">
